--- a/src/components/List/ListItem/PersonProfile/PersonProfile.module.css
+++ b/src/components/List/ListItem/PersonProfile/PersonProfile.module.css
@@ -1,16 +1,9 @@
 .content {
-    /* font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal; */
     display: grid;
-    /* border-radius: 10px; */
-    grid-template-columns: 2fr 8fr;
+    grid-template-columns: 30px 1fr;
     margin-left: 20px;
     margin-top: 2px;
     grid-template-rows: 30px;
-
-    /* grid-template-columns: minmax(110px, auto); */
-    /* background-color: rgb(255, 68, 0); */
 
 }
 
@@ -20,7 +13,6 @@
     height: 20px;
     width: 20px;
     border-radius: 10px;
-    /* box-shadow: 2px 2px 3px #90909083; */
     margin-top: 5px;
     margin-left: 7px;
 
@@ -30,7 +22,6 @@
     display: grid;
     grid-column: 2/3;
     margin-left: 10px;
-    /* padding: 10px; */
     align-self: center;
     justify-items: start;
 
