--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -8,7 +8,6 @@
     border-radius: 50px;
     margin-top: 10px;
     margin-left: 27px;
-
 }
 
 .container1 {
@@ -61,7 +60,7 @@
     margin-right: 50px;
 }
 
-.container7 {
+/* .container7 {
     width: auto;
     height: 17px;
     resize: none;
@@ -75,7 +74,7 @@
     resize: none;
     font-size: 20px;
     padding-left: 8px;
-}
+} */
 
 .container9 {
     display: flex;
